GH-1438 - Polishing.
Original pull request: GH-1484.