@@ -17,18 +17,19 @@ package org.springframework.modulith.junit;
 
 import static org.assertj.core.api.Assertions.*;
 
+import java.util.Collections;
 import java.util.Map;
 
 import org.junit.jupiter.api.Test;
 import org.springframework.core.env.Environment;
 import org.springframework.core.env.MapPropertySource;
 import org.springframework.core.env.StandardEnvironment;
-import org.springframework.modulith.junit.Changes.OnNoChange;
 
 /**
  * Unit tests for {@link ChangesFactory}.
  *
  * @author Oliver Drotbohm
+ * @author Valentin Bossi
  */
 class ChangesFactoryUnitTests {
 
@@ -44,36 +45,38 @@ class ChangesFactoryUnitTests {
 	@Test // GH-1438
 	void skipTestsOnNoChangesSetByProperty() {
 
-		var environment = getEnvironment(Map.of("spring.modulith.test.on-no-changes", OnNoChange.EXECUTE_NO_TESTS.value));
+		var environment = getEnvironment(Map.of("spring.modulith.test.on-no-changes", "skip-all"));
 
-		assertThat(ChangesFactory.getChanges(environment).hasClassChanges()).isFalse();
 		assertThat(ChangesFactory.getChanges(environment).skipTestsOnNoChanges()).isTrue();
 	}
 
 	@Test // GH-1438
 	void executeTestsOnNoChangesSetByProperty() {
 
-		var environment = getEnvironment(Map.of("spring.modulith.test.on-no-changes", OnNoChange.DEFAULT.value));
+		var environment = getEnvironment(Map.of("spring.modulith.test.on-no-changes", "execute-all"));
 
-		assertThat(ChangesFactory.getChanges(environment).hasClassChanges()).isFalse();
 		assertThat(ChangesFactory.getChanges(environment).skipTestsOnNoChanges()).isFalse();
 	}
 
 	@Test // GH-1438
 	void executeTestsByDefaultOrInvalidValue() {
 
-		var environment = getEnvironment(Map.of("spring.modulith.test.on-no-changes", "1"));
+		var environment = getEnvironment(Collections.emptyMap());
 
-		assertThat(ChangesFactory.getChanges(environment).hasClassChanges()).isFalse();
-		assertThat(ChangesFactory.getChanges(environment).skipTestsOnNoChanges()).isFalse();
-
-		environment = getEnvironment(Map.of());
-
-		assertThat(ChangesFactory.getChanges(environment).hasClassChanges()).isFalse();
 		assertThat(ChangesFactory.getChanges(environment).skipTestsOnNoChanges()).isFalse();
 	}
 
-	private Environment getEnvironment(Map<String, Object> properties) {
+	@Test // GH-1438
+	void rejectsInvalidOnNoChangesConfigurationValue() {
+
+		var environment = getEnvironment(Map.of("spring.modulith.test.on-no-changes", "1"));
+
+		assertThatIllegalArgumentException().isThrownBy(() -> {
+			ChangesFactory.getChanges(environment);
+		});
+	}
+
+	private static Environment getEnvironment(Map<String, Object> properties) {
 
 		var propertySource = new MapPropertySource("properties", properties);
 
